# pwnc

./: contributors.md  pyproject.toml
.claude/: settings.local.json
pwnc/: config.py  util.py
pwnc/commands/: patch.py  unpack.py
pwnc/commands/docker/: extract.py
pwnc/commands/init/: __init__.py
pwnc/commands/kernel/: compress.py
pwnc/commands/kernel/templates/: Makefile  pwnc.h
pwnc/commands/scrape/: ubuntu.py
pwnc/commands/template/: __init__.py
pwnc/gdb/: bridge.py  launch.py  protocol.py
pwnc/gdb/mi/: README.md  __init__.py  bridge.py  parser.py  process.py  protocol.py  proxy.py
pwnc/gdb/mi/examples/: 01_parser.py  02_protocol.py  03_proxy.py  04_debug_session.py  05_memory_and_types.py  06_execution_control.py  07_malloc.py  target  target.c
pwnc/gdb/plugins/: gep.py  highlight.py  stop.py
pwnc/glibc/: exit_funcs.py  fsop_wide.py  ptr_mangle.py
pwnc/kernel/: util.py
pwnc/minelf/: __init__.py
pwnc/types/: CLAUDE.md  PLAN.md  __init__.py  base.py  containers.py  display.py  primitives.py  provider.py  resolver.py  value.py
pwnc/types/docs/: display.md  dwarf.md  edge_cases.md  overview.md  resolver.md  types.md  values.md
pwnc/types/dwarf/: __init__.py  abbrev.py  builder.py  constants.py  info.py  reader.py
pwnc/types/examples/: 01_user_defined_types.py  02_struct_nesting.py  03_values_and_providers.py  04_pretty_printing.py  05_dwarf_source.py  06_bitfields.py
