[tool.poetry]
name = "pwnc"
version = "0.1.0"
description = ""
authors = ["unvariant <unvariant.winter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pwntools = "^4.13.1"
toml = "^0.10.2"
argcomplete = "^3.5.1"
colorama = "^0.4.6"
beautifulsoup4 = "^4.14.3"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false
line-ending = "lf"

[tool.ruff.lint]
ignore = ["F403", "F405"]
exclude = ["pwnc/gdb/*"]
fixable = ["F541"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
